# neurodata-wiithout-barriers

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.web.yml  mkdocs.yml  opencode.json  requirements.txt  vercel.json
api/: index.py
dandi-mcp-server/: .gitignore  README.md  mkdocs.yml  pyproject.toml
dandi-mcp-server/docs/: API_COVERAGE.md  ARCHITECTURE_AUDIT.md  index.md
dandi-mcp-server/docs/development/: contributing.md  testing.md
dandi-mcp-server/docs/getting-started/: client-setup.md  installation.md  quickstart.md
dandi-mcp-server/docs/guides/: agent-workflows.md  authenticated-workflows.md  dandi-concepts.md  dataset-exploration.md
dandi-mcp-server/docs/reference/: api-coverage.md  configuration.md  resources-prompts.md  tools.md
dandi-mcp-server/src/dandi_mcp/: __init__.py  client.py  intelligence.py  local_explorer.py  server.py  storage.py
dandi-mcp-server/src/neurodata_literature/: core.py
dandi-mcp-server/tests/: conftest.py  test_client.py  test_intelligence.py  test_literature.py  test_local_explorer.py  test_server.py  test_storage.py
docs/: HARNESS.md  development.md  getting-started.md  index.md  shared-local-explorer.md
docs/mcps/: dandi.md  ibl.md  index.md  openneuro.md
docs/reference/: tool-compatibility.md
harness/: check_servers.py  generate_mcp_config.py
harness/prompts/: demo_visualize_dandi_001097.md  work_with_neurodata_dataset.md
ibl-mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
ibl-mcp-server/docs/: API_COVERAGE.md  AUDIT_REPORT.md
ibl-mcp-server/src/ibl_mcp/: __init__.py  client.py  knowledge.py  local_explorer.py  schemas.py  server.py  services.py  storage.py
ibl-mcp-server/tests/: test_client.py  test_local_explorer.py  test_server.py  test_services.py  test_storage.py
openneuro-mcp-server/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
openneuro-mcp-server/.github/workflows/: ci.yml
openneuro-mcp-server/docs/architecture/: system-architecture.md
openneuro-mcp-server/docs/guides/: example-prompts.md
openneuro-mcp-server/docs/reference/: database-schema.sql  tool-catalog.md
openneuro-mcp-server/scripts/: smoke_test.py
openneuro-mcp-server/src/neurodata_literature/: __init__.py
openneuro-mcp-server/src/openneuro_mcp/: __init__.py  bids.py  client.py  embeddings.py  graph.py  local_explorer.py  models.py  ontology.py  server.py  service.py
openneuro-mcp-server/tests/: test_bids.py  test_local_explorer.py  test_ontology_embeddings_graph.py  test_server.py  test_service.py  test_storage.py
outputs/manual-20260517-nwb/presentations/product-pitch/output/: neurodata-without-barriers-product-pitch.pptx
web-app/: .env.example  README.md
web-app/backend/: pyproject.toml
web-app/backend/scripts/: warm_skill_cache.py
web-app/backend/src/neurodata_web/: __init__.py  cache.py  config.py  dandi_service.py  llm.py  main.py  prompts.py  provider_service.py  repo_paths.py  schemas.py  skill_export.py
web-app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web-app/frontend/src/: App.tsx  api.ts  styles.css  types.ts
