[project]
name = "openneuro-mcp-server"
version = "0.1.0"
description = "An AI-native Model Context Protocol server for semantic discovery and BIDS-aware reasoning over OpenNeuro datasets."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Neurodata Without Barriers contributors" }]
dependencies = [
  "httpx>=0.27.0",
  "mcp[cli]>=1.27.0",
  "networkx>=3.2.0",
  "pydantic>=2.7.0",
  "pypdf>=6.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]
prod = [
  "fastapi>=0.115.0",
  "pgvector>=0.3.0",
  "psycopg[binary,pool]>=3.2.0",
  "qdrant-client>=1.11.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
openneuro-mcp = "openneuro_mcp.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openneuro_mcp", "src/neurodata_literature"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
