[project]
name = "neurodata-without-barriers-web"
version = "0.1.0"
description = "React/FastAPI web app for exploring DANDI datasets with local LLM summaries."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
analysis = [
  "h5py>=3.10.0",
  "nwbinspector>=0.6.0",
  "pynwb>=2.8.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
neurodata-web-api = "neurodata_web.main:run"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurodata_web"]

